# tally

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yml  dev-build.yml  e2e-test.yml  generate-release-notes.yml  pr-build.yml  release.yml  test.yml
config/: merchant_categories.csv  settings.yaml
docs/: formats.html  guide.html  index.html  install-pr.ps1  install.ps1  install.sh  quickstart.html  reference.html  robots.txt  sitemap.xml
src/tally/: analyzer.py  cli.py  config_loader.py  expr_parser.py  format_parser.py  merchant_utils.py  modifier_parser.py  report.py  spending_report.html  spending_report.js
src/tally/commands/: inspect.py  run.py
tests/: test_analyzer.py  test_cli.py  test_expr_parser.py  test_expr_transaction.py  test_inspect.py  test_merchant_utils.py  test_report_html.py
